<resources>
    <string name="app_name">Asset Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="home_empty_text"> Cannot find products</string>
    <string name="empty_image_description">Image UnAvailable</string>
    <string name="home_empty_subtitle">Tap + button to add one</string>
    <string name="add_product">Add Asset</string>
    <string name="barcode">Barcode</string>
    <string name="product_name">Product Name</string>
    <string name="title_activity_add_product">AddProductActivity</string>
    <string name="my_assets">My Assets</string>
    <string name="about_me">Portfolio</string>
    <string name="share">Share with friends</string>
    <string name="tour">App Tour</string>
    <string name="feedback">App Tour</string>
    <string name="title_activity_edit_product">EditProductActivity</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="asset_name">Name</string>
    <string name="comments">Comments</string>
    <string name="title_activity_list_of_assets">ListOfAssetsActivity</string>
    <string name="work_sheet_unavailable">Work Sheet Unavailable</string>
    <string name="stock_name">Stock Name</string>
    <string name="add_stock_name_title">Enter the stock name for the assets you want to place in.</string>
</resources>
