<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_app_add_ons"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/about_me"
            android:title="@string/about_me" />

        <item
            android:id="@+id/nav_about_me"
            android:icon="@drawable/about_me"
            android:title="@string/about_me" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nd_settings"
            android:title="@string/action_settings"/>

    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/nd_settings"
            android:title="@string/share"/>

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/nd_settings"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/nd_settings"
            android:title="@string/tour"/>

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/nd_settings"
            android:title="@string/feedback"/>

    </group>

</menu>
